; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_workshop.c_workshop_test_getcurrentfile.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_workshop.c_workshop_test_getcurrentfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @workshop_test_getcurrentfile() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = call i64 @workshop_get_positions(i32* null, i8** %2, i32* %4, i32* %5, i32* %6, i32* %7, i32* %8, i32* %9, i32* %10, i8** %3)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %0
  %14 = load i8*, i8** %2, align 8
  store i8* %14, i8** %1, align 8
  br label %16

15:                                               ; preds = %0
  store i8* null, i8** %1, align 8
  br label %16

16:                                               ; preds = %15, %13
  %17 = load i8*, i8** %1, align 8
  ret i8* %17
}

declare dso_local i64 @workshop_get_positions(i32*, i8**, i32*, i32*, i32*, i32*, i32*, i32*, i32*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
